# tractile

./: .gitignore  Cargo.toml  Readme.md  server.toml
.github/workflows/: docker.yml
docker/: Dockerfile  Dockerfile.dockerignore  README.md  server.toml
examples/: benchmark.rs  embed_sentences.rs
src/: config.rs  input.rs  lib.rs  output.rs
src/pipeline/: embeddings.rs  inference.rs  mod.rs  model.rs  tokenizer.rs
src/pipeline/embeddings/: mean_pool.rs  mod.rs  raw.rs  token.rs
