[package]
name = "tractile"
version = "0.1.0"
edition = "2024"
description = "ONNX text-embedding inference powered by tract"
license = "Apache-2.0"
authors = ["Frédérik Bilhaut <frederik.bilhaut@gmail.com>"]
keywords = ["nlp", "text-embeddings", "reranking"]
readme = "./Readme.md"
homepage = "https://github.com/fbilhaut/tractile"
repository = "https://github.com/fbilhaut/tractile"
documentation = "https://docs.rs/tractile"

[features]
default = []
metal = ["dep:tract-metal", "dep:tract-gpu"] # Apple Metal acceleration
cuda = ["dep:tract-cuda", "dep:tract-gpu", "tract-cuda/cuda-12040"]
server = ["dep:actix-web", "dep:tokio", "dep:serde_json", "dep:toml", "dep:log", "dep:env_logger"]

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
required-features = ["server"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tract-onnx = "0.23"
tract-core = "0.23"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"

# optional REST server
actix-web  = { version = "4", optional = true }
tokio      = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
toml       = { version = "0.8", optional = true }
log        = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

# optional GPU backends (non-target-gated for cross-platform optional use)
tract-gpu  = { version = "0.23", optional = true }
tract-cuda = { version = "0.23", optional = true, default-features = false }

# Apple Silicon only — enabled via the `metal` feature
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
tract-metal = { version = "0.23", optional = true }
